feat: Add Cinema regression model (Chapter 5) with Java 25 support
第5章「Cinema 興行収入予測モデル（回帰問題の基礎）」の実装を開始しました。

追加内容:
- CinemaPredictor クラス（loadData メソッド実装）
- CinemaPredictorSpec テストクラス
- Cinema データセット生成スクリプト（500件のサンプルデータ）
- cinema.csv データセット（budget, popularity, runtime, vote_average, genre, revenue）

Java 25 対応:
- build.sbt に Java 25 用の JVM オプションを追加
- セキュリティマネージャー許可: -Djava.security.manager=allow
- モジュールアクセス許可: --add-opens オプション拡充
- README に Java 25 動作確認情報を追記

次のステップ:
- genre のエンコーディング実装
- 特徴量統合
- LinearRegression によるモデル訓練
- R² スコア評価

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>